--- a/grant-2016/sass/includes/_header.scss
+++ b/grant-2016/sass/includes/_header.scss
@@ -13,3 +13,18 @@ header{
 		}
 	}
 }
+&.projects{
+	header{
+		background-image: url(../img/banner-2.jpg);
+	}
+}
+&.news{
+	header{
+		background-image: url(../img/banner-3.jpg);
+	}
+}
+&.apply-now{
+	header{
+		background-image: url(../img/banner-4.jpg);
+	}
+}
