--- a/grant-2016/sass/pages/_project-article.scss
+++ b/grant-2016/sass/pages/_project-article.scss
@@ -1,4 +1,7 @@
 .project-article{
+	position: relative;
+	max-width: 1440px;
+	margin: 0 auto;
 	.project-inner{
 		position: relative;
 	}
